--- a/style.css
+++ b/style.css
@@ -45,3 +45,17 @@ h1{
     height: 500px;
     border: none;
 }
+.filme_head{
+    font-size: 20px;
+    padding: 6px 22px;
+    border-radius: 22px;
+    margin-bottom: 15px;
+   
+}
+.filme_head i{
+    float: right;
+}
+.conquistas_text span{
+    color: orange;
+}
+
